--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -51,7 +51,7 @@
     }
   ],
   "link_icons": [
-	    { "pattern": "historicengland.org.uk", "img": "./logos/historicengland.org.uk.svg", "label": "Historic England" },
+	    { "pattern": "historicengland.org.uk", "img": "./logos/www.historicengland.org.uk.svg", "label": "Historic England" },
 	    { "pattern": "www.wikidata.org", "img": "./logos/www.wikidata.org.svg", "label": "Wikidata" }
 	  ]
 }
