Add new data and facets/logos

--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -48,10 +48,16 @@
     },
     {
       "name": "Ownership", "path": ["properties", "ownership"]
+    },
+    {
+      "name": "Year first listed", "path": ["properties", "yearListed"]
     }
   ],
   "link_icons": [
 	    { "pattern": "historicengland.org.uk", "img": "./logos/www.historicengland.org.uk.svg", "label": "Historic England" },
-	    { "pattern": "www.wikidata.org", "img": "./logos/www.wikidata.org.svg", "label": "Wikidata" }
+	    { "pattern": "www.wikidata.org", "img": "./logos/www.wikidata.org.svg", "label": "Wikidata" },
+      { "pattern": "commons.wikimedia.org", "img": "./logos/commons.wikimedia.org.svg", "label": "Wikimedia Commons" },
+      { "pattern": "achurchnearyou.com", "img":"./logos/c_of_logo_v3.jpg", "label": "A Church Near You" },
+      { "pattern": "britishlistedbuildings.co.uk", "img":"./logos/britishlistedbuildings.jpg", "label": "British Listed Buildings"} 
 	  ]
 }
