--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "type": "module",
     "dependencies": {
-      "nanoid": "^5.0.1",
-      "papaparse": "^5.4.1"
+        "moment": "^2.30.1",
+        "momentjs": "^2.0.0",
+        "nanoid": "^5.0.1",
+        "papaparse": "^5.4.1",
+        "wikimedia-commons-file-path": "^1.2.0"
     }
-  }
+}
