--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -56,8 +56,9 @@
   "link_icons": [
 	    { "pattern": "historicengland.org.uk", "img": "./logos/HE.jpg", "label": "Historic England" },
 	    { "pattern": "www.wikidata.org", "img": "./logos/www.wikidata.org.svg", "label": "Wikidata" },
-      { "pattern": "commons.wikimedia.org", "img": "./logos/commons.wikimedia.org.svg", "label": "Wikimedia Commons" },
+      { "pattern": "commons.wikimedia.org", "img": "./logos/Commons-logo-en.svg.png", "label": "Wikimedia Commons" },
       { "pattern": "achurchnearyou.com", "img":"./logos/c_of_logo_v3.jpg", "label": "A Church Near You" },
-      { "pattern": "britishlistedbuildings.co.uk", "img":"./logos/britishlistedbuildings.jpg", "label": "British Listed Buildings"} 
+      { "pattern": "britishlistedbuildings.co.uk", "img":"./logos/britishlistedbuildings.jpg", "label": "British Listed Buildings"},
+      { "pattern": "wikipedia.org", "img":"./logos/en.wikipedia.org.png", "label": "Wikipedia"}
 	  ]
 }
